# my-rust-samples

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  sample.env
container/database/scripts/: 01-init.sql  02-define-tables.sql  03-roles.sql
contracts/: SocialMedia.sol
docker/database/scripts/: 01-init.sql  02-define-tables.sql
docker/files/bootnode/: boot.key
docker/files/node01/: nodekey  password_6ce0ba981dd9b3bc259bbd868be14f957dbe6dcf.txt
docker/files/node01/keystore/: UTC--2023-02-26T09-28-17.736896454Z--6ce0ba981dd9b3bc259bbd868be14f957dbe6dcf
docker/files/node02/: nodekey  password_a2217dd10357c20ace9b1a7dd71625151cfcf386.txt
docker/files/node02/keystore/: UTC--2023-02-26T09-37-05.023489430Z--a2217dd10357c20ace9b1a7dd71625151cfcf386
docker/files/shared/: genesis.json
docker/images/deploy-contract/: Dockerfile  main.js  package.json
docker/images/ethereum/: Dockerfile  boot.sh  setup.sh
docker/images/server/: Dockerfile
src/: interface.rs  main.rs
tests/: Cargo.toml
tests/src/: main.rs
