[package]
name = "local_talk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
daemonize = "0.4.1"
futures = "0.3.26"
sqlx = { version = "0.6", features = ["chrono", "runtime-async-std-native-tls", "postgres"] }
async-std = { version = "1", features = ["attributes"] }
serde_json = "1.0.92"
serde = "1.0.152"
ed25519-dalek = "1.0.1"
rand = "0.7.0"
uuid = { version = "1.3.0", features = ["v4"] }
sha256 = "1.1.2"
