[package]
name = "local_talk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
web3 = "0.19"
futures = "0.3"
sqlx = { version = "0.7", features = ["chrono", "runtime-async-std-native-tls", "postgres"] }
async-std = { version = "1", features = ["attributes"] }
serde_json = "1.0"
serde = "1.0"
ed25519-dalek = "2.0"
rand = "0.8"
uuid = { version = "1.3", features = ["v4"] }
sha256 = "1.1"
